Testsuite: expose reload function in test mode to make tests more robust

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,28 +16,28 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu, macos, windows]
         browser: [firefox, chrome]
         neovim: [stable, nightly]
-        os: [ubuntu-latest, macos-latest, windows-latest]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@master
     - name: Install Firefox Dev Edition (Linux)
-      if: matrix.browser == 'firefox' && matrix.os == 'ubuntu-latest'
+      if: matrix.browser == 'firefox' && matrix.os == 'ubuntu'
       run: |
         sudo npm install -g get-firefox
         get-firefox --platform linux --branch devedition --extract --target $HOME
         echo "::add-path::$HOME/firefox"
     - name: Install Firefox Dev Edition (MacOS)
-      if: matrix.browser == 'firefox' && matrix.os == 'macos-latest'
+      if: matrix.browser == 'firefox' && matrix.os == 'macos'
       run: |
         brew cask --verbose --debug install homebrew/cask-versions/firefox-developer-edition
         echo "::add-path::/Applications/Firefox Developer Edition.app/Contents/MacOS/"
     - name: Install Firefox Dev Edition (Windows)
-      if: matrix.browser == 'firefox' && matrix.os == 'windows-latest'
+      if: matrix.browser == 'firefox' && matrix.os == 'windows'
       run: |
         choco install firefox-dev --pre
         echo "::add-path::C:\Program Files\Firefox Dev Edition"
@@ -49,19 +49,20 @@ jobs:
     - name: Install NPM dependencies
       run: npm ci
     - name: Build Firenvim
-      run: npm run build --env=${{ matrix.browser }}
+      run: npm run webpack -- --env=${{ matrix.browser }}-testing
+    - name: Pack Firenvim (Firefox)
+      if: matrix.browser == 'firefox'
+      run: npm run pack
     - name: Install Manifest
       run: npm run install_manifests
-    - name: Test
+    - name: Test (Firefox)
       if: matrix.browser != 'chrome'
       env:
         HEADLESS: 1
-      run: npm run test ${{ matrix.browser }}
-    - name: Test
-      if: matrix.browser == 'chrome' && matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get install xvfb
-        xvfb-run --auto-servernum npm run test ${{ matrix.browser }}
-    - name: Test
-      if: matrix.browser == 'chrome' && matrix.os != 'ubuntu-latest'
-      run: npm run test ${{ matrix.browser }}
+      run: npm run jest -- ${{ matrix.browser }} || npm run jest -- ${{ matrix.browser }}
+    - name: Test (Chrome, Linux)
+      if: matrix.browser == 'chrome' && matrix.os == 'ubuntu'
+      run: xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }} || xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }}
+    - name: Test (Chrome, Windows/MacOs)
+      if: matrix.browser == 'chrome' && matrix.os != 'ubuntu'
+      run: npm run jest -- ${{ matrix.browser }} || npm run jest -- ${{ matrix.browser }}
