--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "@types/node": "14.0.6",
     "@types/selenium-webdriver": "4.0.9",
     "ace-builds": "^1.4.11",
-    "awesome-typescript-loader": "5.2.1",
     "codemirror": "^5.54.0",
     "copy-webpack-plugin": "6.0.1",
     "geckodriver": "1.19.1",
+    "imports-loader": "^0.8.0",
     "jest": "25.5.4",
     "monaco-editor": "^0.20.0",
     "msgpack-lite": "0.1.26",
     "selenium-webdriver": "4.0.0-alpha.7",
     "sharp": "0.25.3",
     "ts-jest": "25.5.1",
+    "ts-loader": "^7.0.5",
     "tslint": "6.1.2",
     "typescript": "3.9.3",
     "web-ext": "4.2.0",
