--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,10 +59,22 @@ jobs:
       if: matrix.browser != 'chrome'
       env:
         HEADLESS: 1
-      run: npm run jest -- ${{ matrix.browser }} || npm run jest -- ${{ matrix.browser }}
+      run: |
+        npm run jest -- ${{ matrix.browser }} \
+        || npm run jest -- ${{ matrix.browser }} \
+        || npm run jest -- ${{ matrix.browser }} \
+        || npm run jest -- ${{ matrix.browser }} \
     - name: Test (Chrome, Linux)
       if: matrix.browser == 'chrome' && matrix.os == 'ubuntu'
-      run: xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }} || xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }}
+      run: |
+        xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }} \
+        || xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }} \
+        || xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }} \
+        || xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }} \
     - name: Test (Chrome, Windows/MacOs)
       if: matrix.browser == 'chrome' && matrix.os != 'ubuntu'
-      run: npm run jest -- ${{ matrix.browser }} || npm run jest -- ${{ matrix.browser }}
+      run: |
+        npm run jest -- ${{ matrix.browser }} \
+        || npm run jest -- ${{ matrix.browser }} \
+        || npm run jest -- ${{ matrix.browser }} \
+        || npm run jest -- ${{ matrix.browser }} \
