--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "ace-builds": "^1.4.12",
     "codemirror": "^5.59.1",
     "copy-webpack-plugin": "7.0.0",
+    "draft-js": "^0.11.6",
     "imports-loader": "^1.2.0",
     "istanbul-lib-coverage": "^3.0.0",
     "jest": "25.5.4",
     "monaco-editor": "^0.22.1",
     "msgpack-lite": "0.1.26",
     "nyc": "^15.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "selenium-webdriver": "4.0.0-alpha.8",
     "sharp": "0.27.1",
     "ts-jest": "25.5.1",
