Add code coverage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,8 @@ jobs:
       run: npm ci
     - name: Build Firenvim
       run: npm run webpack -- --env=${{ matrix.browser }}-testing
+    - name: Instrument Firenvim
+      run: npm run nyc -- instrument --in-place target/${{ matrix.browser }}
     - name: Pack Firenvim (Firefox)
       if: matrix.browser == 'firefox'
       run: npm run pack
