--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,26 +58,24 @@ jobs:
       run: npm run pack
     - name: Install Manifest
       run: npm run install_manifests
-    - name: Test (Firefox)
-      if: matrix.browser != 'chrome'
-      env:
-        HEADLESS: 1
-      run: |
-        npm run jest -- ${{ matrix.browser }} \
-        || npm run jest -- ${{ matrix.browser }} \
-        || npm run jest -- ${{ matrix.browser }} \
-        || npm run jest -- ${{ matrix.browser }} \
-    - name: Test (Chrome, Linux)
-      if: matrix.browser == 'chrome' && matrix.os == 'ubuntu'
+    - name: Test (Linux)
+      if: matrix.os == 'ubuntu'
       run: |
         xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }} \
         || xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }} \
         || xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }} \
         || xvfb-run --auto-servernum npm run jest -- ${{ matrix.browser }} \
-    - name: Test (Chrome, Windows/MacOs)
-      if: matrix.browser == 'chrome' && matrix.os != 'ubuntu'
+    - name: Test (Windows/MacOs)
+      if: matrix.os != 'ubuntu'
       run: |
         npm run jest -- ${{ matrix.browser }} \
         || npm run jest -- ${{ matrix.browser }} \
         || npm run jest -- ${{ matrix.browser }} \
         || npm run jest -- ${{ matrix.browser }} \
+    - name: Artifact upload (failure only)
+      uses: actions/upload-artifact@v2
+      if: failure()
+      with:
+        name: failure-${{ matrix.os }}-${{ matrix.browser }}-${{ matrix.neovim }}
+        path: failures
+        retention-days: 2
