--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,26 +26,33 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
     - name: Install ffmpeg (Linux)
+      timeout-minutes: 1
       if: matrix.os == 'ubuntu'
       run: sudo apt update -y && sudo apt install -y ffmpeg
     - name: Install ffmpeg (MacOs)
+      timeout-minutes: 1
+      if: matrix.os == 'macos'
       run: curl -JL https://evermeet.cx/ffmpeg/get/zip --output ffmpeg.zip && unzip ffmpeg.zip && echo "$PWD" >> $GITHUB_PATH
     - name: Install ffmpeg (Windows)
+      timeout-minutes: 3
       if: matrix.os == 'windows'
       run: choco install ffmpeg
     - name: Install Firefox Dev Edition (Linux)
+      timeout-minutes: 1
       if: matrix.browser == 'firefox' && matrix.os == 'ubuntu'
       run: |
         sudo npm install -g get-firefox
         get-firefox --platform linux --branch devedition --extract --target $HOME
         echo "$HOME/firefox" >> $GITHUB_PATH
     - name: Install Firefox Dev Edition (MacOS)
+      timeout-minutes: 2
       if: matrix.browser == 'firefox' && matrix.os == 'macos'
       run: |
         brew install --cask homebrew/cask-versions/firefox-developer-edition
         echo "/Applications/Firefox Developer Edition.app/Contents/MacOS/" >> $GITHUB_PATH
     - name: Install Firefox Dev Edition (Windows)
       if: matrix.browser == 'firefox' && matrix.os == 'windows'
+      timeout-minutes: 2
       run: |
         choco install firefox-dev --pre
         echo "C:\Program Files\Firefox Dev Edition" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -55,8 +62,10 @@ jobs:
         neovim: true
         version: ${{ matrix.neovim }}
     - name: Install NPM dependencies
+      timeout-minutes: 3
       run: npm ci
     - name: Build Firenvim
+      timeout-minutes: 1
       run: npm run webpack -- --env=${{ matrix.browser }}-testing
     - name: Instrument Firenvim (Linux/Firefox/Stable only)
       if: matrix.os == 'ubuntu' && matrix.browser == 'firefox' && matrix.neovim == 'stable'
@@ -67,15 +76,18 @@ jobs:
     - name: Install Manifest
       run: npm run install_manifests
     - name: Test (Linux)
+      timeout-minutes: 10
       if: matrix.os == 'ubuntu'
       run: xvfb-run --auto-servernum -s "-screen 0 920x690x24" sh -c '(sleep 3 && ffmpeg -loglevel warning -t 240 -an -video_size 920x690 -framerate 30 -f x11grab -i $DISPLAY video.webm) & npm run jest -- ${{ matrix.browser }}'
     - name: Test (MacOS)
       if: matrix.os == 'macos'
+      timeout-minutes: 10
       run: |
         ffmpeg -loglevel warning -t 240 -framerate 30 -f avfoundation -i "0:0" video.webm &
         exit_code=0 && npm run jest -- ${{ matrix.browser }} || exit_code=$? && sleep 20 && exit $exit_code
     - name: Test (Windows)
       if: matrix.os == 'windows'
+      timeout-minutes: 10
       run: |
         Start-Job { ffmpeg -loglevel warning -t 240 -framerate 30 -f gdigrab -i desktop D:\a\firenvim\firenvim\video.webm }
         npm run jest -- ${{ matrix.browser }}
