--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/selenium-webdriver": "4.0.13",
     "@types/ws": "^7.4.4",
     "ace-builds": "^1.4.12",
+    "addons-linter": "^3.2.0",
     "codemirror": "^5.61.1",
     "copy-webpack-plugin": "8.1.1",
     "imports-loader": "^3.0.0",
