CI: re-enable test workflow
Previous change broke it it seems.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,35 @@
 name: Test
 
 on:
-  workflow_run:
-    workflows: ["Eslint"]
-    types:
-      - completed
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - '*'
 
 env:
   TESTING: 1
 
 jobs:
+  tslint:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@master
+    - name: Install NPM dependencies
+      run: npm ci
+    - name: Install eslint
+      run: npm install eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser
+    - name: Run ESlint
+      run: '"$(npm bin)/eslint" "./**/*.ts"'
+    - name: Run addons-linter
+      run: 'npm run build && npm run pack && "$(npm bin)/addons-linter" target/xpi/firefox-latest.xpi' 
+
   test:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    needs: tslint
+
     strategy:
       fail-fast: false
       matrix:
