--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "monaco-editor": "^0.26.1",
     "msgpack-lite": "0.1.26",
     "nyc": "^15.1.0",
+    "prosemirror-example-setup": "^1.1.2",
     "selenium-webdriver": "4.0.0-beta.3",
     "sharp": "0.28.3",
     "ts-jest": "27.0.4",
