--- a/src/manifest.json
+++ b/src/manifest.json
@@ -44,7 +44,7 @@
    "options_ui": {
       "page": "options.html"
    },
-   "permissions": [ "nativeMessaging", "storage", "tabs" ],
+   "permissions": [ "nativeMessaging", "storage" ],
    "version": "replaced_at_compile_time",
    "web_accessible_resources": [ "index.html", "ISSUE_TEMPLATE.md" ]
 }
