Remove thunderbird support
Mozilla isn't interested in enabling Firenvim to work in Thunderbird
again ( https://github.com/glacambre/firenvim/issues/1263 ). The code
supporting Thunderbird in Firenvim makes things more complicated than
they should be, so removing it will enable a refactor that will make
Firenvim easier to work with.

Closes https://github.com/glacambre/firenvim/issues/1185 .

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "license": "GPL-3.0",
   "name": "Firenvim",
   "scripts": {
-    "build": "webpack && web-ext build --source-dir target/firefox --artifacts-dir target/xpi --overwrite-dest -n firefox-latest.xpi && web-ext build --source-dir target/thunderbird --artifacts-dir target/xpi --overwrite-dest -n thunderbird-latest.xpi",
+    "build": "webpack && web-ext build --source-dir target/firefox --artifacts-dir target/xpi --overwrite-dest -n firefox-latest.xpi",
     "clean": "rm -rf target",
     "install_manifests": "nvim --headless -u NORC -i NONE -n -c \":set rtp+=.\" -c \"call firenvim#install(1)\" -c \"quit\"",
     "jest": "jest",
