--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@types/selenium-webdriver": "4.0.15",
     "@types/ws": "^8.2.0",
     "ace-builds": "^1.4.13",
-    "addons-linter": "^4.2.0",
+    "addons-linter": "^5.20.0",
     "codemirror": "^5.63.1",
     "copy-webpack-plugin": "9.0.1",
     "editor-adapter": "^0.0.5",
@@ -18,11 +18,11 @@
     "msgpack-lite": "0.1.26",
     "nyc": "^15.1.0",
     "selenium-webdriver": "4.0.0-beta.3",
-    "sharp": "0.29.2",
+    "sharp": "^0.31.2",
     "ts-jest": "27.0.7",
     "ts-loader": "^9.2.6",
     "typescript": "4.4.4",
-    "web-ext": "6.5.0",
+    "web-ext": "^7.3.1",
     "web-ext-types": "3.2.1",
     "webextension-polyfill": "0.8.0",
     "webpack": "5.74.0",
