vint.yml: attempt to upgrade action
Apparently the setup-python action is dead

--- a/.github/workflows/vint.yml
+++ b/.github/workflows/vint.yml
@@ -18,11 +18,5 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
-    - name: Set up Python
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Setup dependencies
-      run: pip install vim-vint
-    - name: Run Vimscript Linter
-      run: vint .
+    - name: Run vint with reviewdog
+      uses: reviewdog/action-vint@v1.17.0
