--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
    "background": {
-      "scripts": [ "background.js" ]
+      "service_worker": "background.js"
    },
    "browser_action": {
       "browser_style": true,
