--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
    "background": {
       "service_worker": "background.js"
    },
-   "browser_action": {
+   "action": {
       "browser_style": true,
       "default_icon": "firenvim.svg",
       "default_popup": "browserAction.html",
