--- a/src/manifest.json
+++ b/src/manifest.json
@@ -45,6 +45,7 @@
       "page": "options.html"
    },
    "permissions": [ "nativeMessaging", "storage" ],
+   "host_permissions": [ "<all_urls>" ],
    "version": "replaced_at_compile_time",
    "web_accessible_resources": [ "index.html", "ISSUE_TEMPLATE.md" ]
 }
