--- a/src/manifest.json
+++ b/src/manifest.json
@@ -47,5 +47,10 @@
    "permissions": [ "nativeMessaging", "storage" ],
    "host_permissions": [ "<all_urls>" ],
    "version": "replaced_at_compile_time",
-   "web_accessible_resources": [ "index.html", "ISSUE_TEMPLATE.md" ]
+   "web_accessible_resources": [
+      {
+         "resources": [ "index.html", "ISSUE_TEMPLATE.md" ],
+         "matches": [ "<all_urls>" ]
+      }
+   ]
 }
