Revert "Change browser_action to action"
This reverts commit a6fd34fe82ebfa262de78e7e2c4fc5badd8a77c0.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
    "background": {
       "service_worker": "background.js"
    },
-   "action": {
+   "browser_action": {
       "browser_style": true,
       "default_icon": "firenvim.svg",
       "default_popup": "browserAction.html",
