Revert "Update web_accessible_resources format"
This reverts commit 3f15f76e1f86c100daa001146bfcf08c9b514ae4.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -47,10 +47,5 @@
    "permissions": [ "nativeMessaging", "storage" ],
    "host_permissions": [ "<all_urls>" ],
    "version": "replaced_at_compile_time",
-   "web_accessible_resources": [
-      {
-         "resources": [ "index.html", "ISSUE_TEMPLATE.md" ],
-         "matches": [ "<all_urls>" ]
-      }
-   ]
+   "web_accessible_resources": [ "index.html", "ISSUE_TEMPLATE.md" ]
 }
