Revert "Update manifest.json to service_worker"
This reverts commit 0c7d1bb195f64b0e3fcb911eb15ee6631538d7c0.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
    "background": {
-      "service_worker": "background.js"
+      "scripts": [ "background.js" ]
    },
    "browser_action": {
       "browser_style": true,
