--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Install ffmpeg (Linux)
       if: matrix.os == 'ubuntu'
       run: sudo apt update -y && sudo apt install -y ffmpeg
-    - name: Install ffmpeg (MacOs)
+    - name: Install ffmpeg (macOS)
       if: matrix.os == 'macos'
       run: curl -JL https://evermeet.cx/ffmpeg/get/zip --output ffmpeg.zip && unzip ffmpeg.zip && echo "$PWD" >> $GITHUB_PATH
     - name: Install ffmpeg (Windows)
@@ -57,7 +57,7 @@ jobs:
         sudo npm install -g get-firefox
         get-firefox --platform linux --branch devedition --extract --target $HOME
         echo "$HOME/firefox" >> $GITHUB_PATH
-    - name: Install Firefox Dev Edition (MacOS)
+    - name: Install Firefox Dev Edition (macOS)
       if: matrix.browser == 'firefox' && matrix.os == 'macos'
       run: |
         brew install --cask firefox@developer-edition
@@ -95,7 +95,7 @@ jobs:
       # using raw output... Nothing worked. Spending more effort on this will
       # only result in suffering and wasted time.
       run: xvfb-run --auto-servernum -s "-screen 0 920x690x24" sh -c '(sleep 3 && ffmpeg -loglevel error -t 240 -an -video_size 920x690 -framerate 30 -f x11grab -i $DISPLAY video.webm) & npm run jest -- ${{ matrix.browser }}'
-    - name: Test (MacOS)
+    - name: Test (macOS)
       if: matrix.os == 'macos'
       timeout-minutes: 15
       run: |
